# NCEPLIBS-external

./: .gitmodules  CMakeLists.txt  README.md  config_jasper.sh.tmpl  config_netcdfc.sh.tmpl  config_netcdff.sh.tmpl  fix_libjpeg.sh  fix_zlib.sh
.github/workflows/: linux.yml  macOS-GCC.yml  macos-clanggfortran.yml  macos-gccgfortran.yml
doc/: README_cheyenne_gnu.txt  README_cheyenne_intel.txt  README_docker_gnu.md  README_endeavor_intel.txt  README_gaea_intel.txt  README_hera_gnu.txt  README_hera_intel.txt  README_hera_intel_parallel_netcdf.txt  README_jet_intel.txt  README_macos_clanggfortran.txt  README_macos_gccgfortran.txt  README_odin_intel.txt  README_orion_intel.txt  README_redhat_gnu.txt  README_stampede_intel.txt  README_ubuntu_gnu.txt  README_wcoss_cray_intel.txt  README_wcoss_dell_p3_intel.txt
openmpi/: extract.sh
patches/: esmf_macos_install_name_tool_fix.sh  libjpeg.patch  netcdf-fortran.static.path  wgrib2.patch  zlib.patch
tmplModulefiles/: esmf  jasper  libjpeg  libpng  netcdf  wgrib2
wgrib2/: extract_and_configure.sh  install.sh  makefile
